--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
+
   },
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.79.1",
-    "react-native-status-keycard": "^2.5.14"
+    "react-native-status-keycard": "git+https://github.com/status-im/react-native-status-keycard.git#refs/tags/v2.6.2"
+
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,7 +35,8 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "patch-package": "^8.0.0"
   },
   "engines": {
     "node": ">=18"
