--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.NFC"/>
   <uses-permission android:name="android.permission.CAMERA" />
-
+  <uses-permission android:name="android.permission.NFC_TRANSACTION_EVENTS" />
   <uses-feature android:name="android.hardware.nfc" android:required="true" />
-  <uses-feature android:name="android.hardware.nfc.hce" android:required="true" />
+  <uses-feature android:name="android.hardware.nfc.hce" android:required="false" />
   
 
   <application
@@ -30,6 +30,7 @@
       <intent-filter>
         <action android:name="android.nfc.action.TECH_DISCOVERED"/>
         <category android:name="android.intent.category.DEFAULT"/>
+        <data android:mimeType="application/com.myproject"/>
       </intent-filter>
       <meta-data
     android:name="android.nfc.action.TECH_DISCOVERED"
