--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,3 +6,10 @@ include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
 include ':react-native-status-keycard'
 project(':react-native-status-keycard').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-status-keycard/android')
+
+include ':react-native-nfc-manager'
+project(':react-native-nfc-manager').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-nfc-manager/android')
+
+
+//  <uses-permission android:name="android.permission.NFC" />
+//     <uses-feature android:name="android.hardware.nfc" android:required="false" />
