--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-      "android": "cd android && ./gradlew clean && cd .. && npx react-native run-android",
+    "android": "cd android && ./gradlew clean && cd .. && npx react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
     "postinstall": "patch-package"
-
   },
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-status-keycard": "git+https://github.com/status-im/react-native-status-keycard.git#refs/tags/v2.6.2"
-
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,10 +31,10 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4",
-    "patch-package": "^8.0.0"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
